--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,4 @@
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
 <!-- <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
@@ -17,7 +14,46 @@
     </ion-toolbar>
   </ion-header> -->
   <section>
+  <header>
+    <div class="header-box">
+      <input type="checkbox" name="check" id="check">
+      <div class="logo-container">
+        <img src="../../../assets/logo.png" style="width: 100px;">
+      </div>
 
+      <div class="nav-btn">
+        <div class="nav-links">
+          <ul>
+            <li class="nav-link" style="--i: .6s">
+              <a href="#">Home</a>
+            </li>
+            <li class="nav-link" style="--i: .6s">
+              <a href="#">About Us</a>
+            </li>
+            <li class="nav-link" style="--i: .6s">
+              <a href="#">Chef</a>
+            </li>
+            <li class="nav-link" style="--i: .6s">
+              <a href="#">menu</a>
+            </li>
+            
+          </ul>
+        </div>
+        <div class="log-sign" style="--i: 1.8s">
+          <span class="fa-stack fa-2x has-badge" data-count="5">
+  <i class="fa fa-circle fa-stack-2x fa-inverse"></i>
+  <i style="" class="fa fa-shopping-cart fa-stack-2x red-cart"></i>
+</span>
+        </div>
+      </div>
+
+      <div class="hamburger-menu-container">
+        <div class="hamburger-menu">
+          <div></div>
+        </div>
+      </div>
+    </div>
+  </header>
     <div class="">
       <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
@@ -70,8 +106,8 @@
         </a>
       </div>
     </div>
-  </section>
-  <div class="products bg-orange">
+
+     <div class="products bg-orange">
     <div class="container-fluid">
     <div class="row">
       <div class="col-xl-3 col-lg-3 col-md-4 col-sm-4">
@@ -227,8 +263,13 @@
 
   </div>
   </div>
+  </section>
+ 
 
   <div class="bg bg-orange"></div>
 
+
+
+  
 
 </ion-content>
