--- a/src/app/components/event-details/event-details.page.html
+++ b/src/app/components/event-details/event-details.page.html
@@ -12,6 +12,67 @@
   </ion-header> -->
 
     <!-- Select Event Menu Start -->
+
+<section class="about" style="display: none;">
+                <div class="container">
+                    <div class="about-top">
+                        <h2 class="h2 section-title">What we do</h2>
+
+                        <p class="section-text">Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back into the development of the asset through its charitable foundation</p>
+
+                        <ul class="about-list">
+                            <li>
+                                <div class="about-card">
+                                    <div class="card-icon"><ion-icon name="briefcase-outline" role="img" class="md hydrated"></ion-icon></div>
+
+                                    <h3 class="h3 card-title">Paid Search and Social Management</h3>
+
+                                    <p class="card-text">Help your business increase their visibility and reach targeted audiences effectively</p>
+                                </div>
+                            </li>
+
+                            <li>
+                                <div class="about-card">
+                                    <div class="card-icon"><ion-icon name="chatbubbles-outline" role="img" class="md hydrated"></ion-icon></div>
+
+                                    <h3 class="h3 card-title">Direct Response Content</h3>
+
+                                    <p class="card-text">Drive immediate engagement and conversions, prompting your audience to act right away</p>
+                                </div>
+                            </li>
+
+                            <li>
+                                <div class="about-card">
+                                    <div class="card-icon"><ion-icon name="rocket-outline" role="img" class="md hydrated"></ion-icon></div>
+
+                                    <h3 class="h3 card-title"><abbr title="Conversion Rate Optimization">CRO</abbr> and Retention Optimizations</h3>
+
+                                    <p class="card-text">By optimizing both conversion rates and customer retention, your business will significantly boost their overall revenue</p>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="about-bottom">
+                        <figure class="about-bottom-banner">
+                            <img src="https://i.postimg.cc/nzjhFvtq/about-banner.png" alt="about banner" class="about-banner">
+                        </figure>
+
+                        <div class="about-bottom-content">
+                            <h2 class="h2 section-title">We're obsessed with growth</h2>
+
+                            <p class="section-text">Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back</p>
+
+                            <button class="btn btn-secondary">Sign up for Free</button>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12">
+						
 <section class="Event-Menu-List-section">
   <div class="Event-Menu-List">
               <div class="Event-Menu-List-img">
@@ -69,6 +130,11 @@
 
             </div>
 </section>
+					</div>
+				</div>
+			</div>
 
+
+  <div class="bg bg-orange"></div>
   <!-- Select Event Menu End -->
 </ion-content>
