--- a/src/app/components/menu/menu.page.html
+++ b/src/app/components/menu/menu.page.html
@@ -15,15 +15,21 @@
       <ion-title size="large">menu</ion-title>
     </ion-toolbar>
   </ion-header> -->
-<section class="menu-list">
+<div class="container ">
+				<div class="row">
+					<div class="col-md-12">
+
+
+
+<section class="menu-list ">
     <div class="row p-2">
       <h2 class="title">Select Menu List</h2>
-      <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
+      <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
         <label class="option_item">
           <input type="checkbox" class="checkbox">
           <div class="option_inner facebook">
             <div class="tickmark">
-              <img src="https://venus-scocu-assets.s3.amazonaws.com/3884028172423400">
+              <img src="https://cdn-icons-png.flaticon.com/512/5290/5290119.png">
             </div>
             <div class="Menu-List">
               <div class="Menu-List-img">
@@ -68,12 +74,12 @@
         </label>
 
       </div>
-      <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
+      <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
         <label class="option_item">
           <input type="checkbox" class="checkbox">
           <div class="option_inner facebook">
             <div class="tickmark">
-              <img src="https://venus-scocu-assets.s3.amazonaws.com/3884028172423400">
+              <img src="https://cdn-icons-png.flaticon.com/512/5290/5290119.png">
             </div>
             <div class="Menu-List">
               <div class="Menu-List-img">
@@ -121,12 +127,12 @@
           </div>
         </label>
       </div>
-      <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
+      <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
         <label class="option_item">
           <input type="checkbox" class="checkbox">
           <div class="option_inner facebook">
             <div class="tickmark">
-              <img src="https://venus-scocu-assets.s3.amazonaws.com/3884028172423400">
+              <img src="https://cdn-icons-png.flaticon.com/512/5290/5290119.png">
             </div>
             <div class="Menu-List">
               <div class="Menu-List-img">
@@ -171,12 +177,12 @@
         </label>
 
       </div>
-      <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
+      <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
         <label class="option_item">
           <input type="checkbox" class="checkbox">
           <div class="option_inner facebook">
             <div class="tickmark">
-              <img src="https://venus-scocu-assets.s3.amazonaws.com/3884028172423400">
+              <img src="https://cdn-icons-png.flaticon.com/512/5290/5290119.png">
             </div>
             <div class="Menu-List">
               <div class="Menu-List-img">
@@ -224,12 +230,12 @@
           </div>
         </label>
       </div>
-      <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
+      <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
         <label class="option_item">
           <input type="checkbox" class="checkbox">
           <div class="option_inner facebook">
             <div class="tickmark">
-              <img src="https://venus-scocu-assets.s3.amazonaws.com/3884028172423400">
+              <img src="https://cdn-icons-png.flaticon.com/512/5290/5290119.png">
             </div>
             <div class="Menu-List">
               <div class="Menu-List-img">
@@ -274,12 +280,12 @@
         </label>
 
       </div>
-      <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
+      <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
         <label class="option_item">
           <input type="checkbox" class="checkbox">
           <div class="option_inner facebook">
             <div class="tickmark">
-              <img src="https://venus-scocu-assets.s3.amazonaws.com/3884028172423400">
+              <img src="https://cdn-icons-png.flaticon.com/512/5290/5290119.png">
             </div>
             <div class="Menu-List">
               <div class="Menu-List-img">
@@ -332,5 +338,10 @@
       </div>
     </div>
 </section>
+            </div>
+            </div>
+            </div>
 
+
+  <div class="bg bg-orange"></div>
 </ion-content>
