--- a/src/app/components/cheffs/cheffs.page.html
+++ b/src/app/components/cheffs/cheffs.page.html
@@ -1,13 +1,339 @@
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>cheffs</ion-title>
+    <ion-title>menu</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
+  <!-- <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">cheffs</ion-title>
+      <ion-title size="large">menu</ion-title>
     </ion-toolbar>
-  </ion-header>
+  </ion-header> -->
+<div class="container">
+				<div class="row">
+					<div class="col-md-12">
+
+
+
+<section class="menu-list ">
+    <div class="row p-2">
+      <h2 class="title">Select Cheff</h2>
+      <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
+        <label class="option_item">
+          <input type="checkbox" class="checkbox">
+          <div class="option_inner facebook">
+            <div class="tickmark">
+              <img src="https://cdn-icons-png.flaticon.com/512/5290/5290119.png">
+            </div>
+            <div class="Menu-List">
+              <div class="Menu-List-img">
+                <img
+                  src="https://static.vecteezy.com/system/resources/thumbnails/028/636/826/small_2x/handsome-master-chef-ready-generate-ai-photo.jpg"
+                  alt="thumb">
+
+                <div class="Menu-List-img-overlay">
+                  <div class="icon">
+                    <span>
+                      <svg width="18" height="18" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                          d="M8.361 2.72748C9.03157 1.3148 10.9691 1.3148 11.6396 2.72748L12.7986 5.16895C13.0649 5.72993 13.5796 6.11875 14.175 6.20871L16.7664 6.60021C18.2659 6.82675 18.8646 8.74259 17.7796 9.84221L15.9044 11.7426C15.4736 12.1793 15.277 12.8084 15.3787 13.425L15.8213 16.1084C16.0775 17.6611 14.51 18.8452 13.1689 18.1121L10.851 16.8451C10.3184 16.554 9.68221 16.554 9.14964 16.8451L6.8318 18.1121C5.49065 18.8452 3.92318 17.6611 4.17931 16.1084L4.62198 13.425C4.72369 12.8084 4.52709 12.1793 4.09623 11.7426L2.22105 9.84221C1.13605 8.74259 1.73477 6.82675 3.23421 6.60021L5.82564 6.20871C6.42107 6.11875 6.9358 5.72993 7.20208 5.16895L8.361 2.72748Z"
+                          fill="#FFB23E"></path>
+                      </svg>
+                    </span>
+                  </div>
+
+                  <div class="text pl-1">
+                    <p>4.7(2.5K)</p>
+                  </div>
+                </div>
+
+              </div>
+
+              <div class="popular-inner-box">
+                <div class="Menu-List-text">
+                  <h3>K. Subba Rao</h3>
+                </div>
+
+                <div class="popular-inner-item">
+                  <div class="text">
+                    <h5>"Proficient in crafting classic and modern cuisine, with a knack for developing unique flavor profiles." </h5>
+                  </div>
+                </div>
+              </div>
+
+
+            </div>
+          </div>
+        </label>
+
+      </div>
+      <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
+        <label class="option_item">
+          <input type="checkbox" class="checkbox">
+          <div class="option_inner facebook">
+            <div class="tickmark">
+              <img src="https://cdn-icons-png.flaticon.com/512/5290/5290119.png">
+            </div>
+            <div class="Menu-List">
+              <div class="Menu-List-img">
+                <img
+                  src="https://static.vecteezy.com/system/resources/thumbnails/035/592/098/small_2x/ai-generated-happy-professional-chef-portrait-over-blue-background-free-photo.jpg"
+                  alt="thumb">
+
+                <div class="Menu-List-img-overlay">
+                  <div class="icon">
+                    <span>
+                      <svg width="18" height="18" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                          d="M8.361 2.72748C9.03157 1.3148 10.9691 1.3148 11.6396 2.72748L12.7986 5.16895C13.0649 5.72993 13.5796 6.11875 14.175 6.20871L16.7664 6.60021C18.2659 6.82675 18.8646 8.74259 17.7796 9.84221L15.9044 11.7426C15.4736 12.1793 15.277 12.8084 15.3787 13.425L15.8213 16.1084C16.0775 17.6611 14.51 18.8452 13.1689 18.1121L10.851 16.8451C10.3184 16.554 9.68221 16.554 9.14964 16.8451L6.8318 18.1121C5.49065 18.8452 3.92318 17.6611 4.17931 16.1084L4.62198 13.425C4.72369 12.8084 4.52709 12.1793 4.09623 11.7426L2.22105 9.84221C1.13605 8.74259 1.73477 6.82675 3.23421 6.60021L5.82564 6.20871C6.42107 6.11875 6.9358 5.72993 7.20208 5.16895L8.361 2.72748Z"
+                          fill="#FFB23E"></path>
+                      </svg>
+                    </span>
+                  </div>
+
+                  <div class="text pl-1">
+                    <p>4.7(2.5K)</p>
+                  </div>
+                </div>
+
+              </div>
+
+              <div class="popular-inner-box">
+                <div class="Menu-List-text">
+                  <h3>K. Subba Rao</h3>
+                </div>
+
+                <div class="popular-inner-item">
+
+
+                  <div class="text">
+                    <h5>"Proficient in crafting classic and modern cuisine, with a knack for developing unique flavor profiles." </h5>
+                  </div>
+                </div>
+
+
+              </div>
+
+
+            </div>
+          </div>
+        </label>
+      </div>
+      <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
+        <label class="option_item">
+          <input type="checkbox" class="checkbox">
+          <div class="option_inner facebook">
+            <div class="tickmark">
+              <img src="https://cdn-icons-png.flaticon.com/512/5290/5290119.png">
+            </div>
+            <div class="Menu-List">
+              <div class="Menu-List-img">
+                <img
+                  src="https://static.vecteezy.com/system/resources/thumbnails/026/488/038/small_2x/handsome-male-master-chef-smiling-generate-ai-photo.jpg"
+                  alt="thumb">
+
+                <div class="Menu-List-img-overlay">
+                  <div class="icon">
+                    <span>
+                      <svg width="18" height="18" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                          d="M8.361 2.72748C9.03157 1.3148 10.9691 1.3148 11.6396 2.72748L12.7986 5.16895C13.0649 5.72993 13.5796 6.11875 14.175 6.20871L16.7664 6.60021C18.2659 6.82675 18.8646 8.74259 17.7796 9.84221L15.9044 11.7426C15.4736 12.1793 15.277 12.8084 15.3787 13.425L15.8213 16.1084C16.0775 17.6611 14.51 18.8452 13.1689 18.1121L10.851 16.8451C10.3184 16.554 9.68221 16.554 9.14964 16.8451L6.8318 18.1121C5.49065 18.8452 3.92318 17.6611 4.17931 16.1084L4.62198 13.425C4.72369 12.8084 4.52709 12.1793 4.09623 11.7426L2.22105 9.84221C1.13605 8.74259 1.73477 6.82675 3.23421 6.60021L5.82564 6.20871C6.42107 6.11875 6.9358 5.72993 7.20208 5.16895L8.361 2.72748Z"
+                          fill="#FFB23E"></path>
+                      </svg>
+                    </span>
+                  </div>
+
+                  <div class="text pl-1">
+                    <p>4.7(2.5K)</p>
+                  </div>
+                </div>
+
+              </div>
+
+              <div class="popular-inner-box">
+                <div class="Menu-List-text">
+                  <h3>K. Subba Rao</h3>
+                </div>
+
+                <div class="popular-inner-item">
+                  <div class="text">
+                    <h5>"Proficient in crafting classic and modern cuisine, with a knack for developing unique flavor profiles." </h5>
+                  </div>
+                </div>
+              </div>
+
+
+            </div>
+          </div>
+        </label>
+
+      </div>
+      <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
+        <label class="option_item">
+          <input type="checkbox" class="checkbox">
+          <div class="option_inner facebook">
+            <div class="tickmark">
+              <img src="https://cdn-icons-png.flaticon.com/512/5290/5290119.png">
+            </div>
+            <div class="Menu-List">
+              <div class="Menu-List-img">
+                <img
+                  src="https://static.vecteezy.com/system/resources/thumbnails/028/636/826/small_2x/handsome-master-chef-ready-generate-ai-photo.jpg"
+                  alt="thumb">
+
+                <div class="Menu-List-img-overlay">
+                  <div class="icon">
+                    <span>
+                      <svg width="18" height="18" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                          d="M8.361 2.72748C9.03157 1.3148 10.9691 1.3148 11.6396 2.72748L12.7986 5.16895C13.0649 5.72993 13.5796 6.11875 14.175 6.20871L16.7664 6.60021C18.2659 6.82675 18.8646 8.74259 17.7796 9.84221L15.9044 11.7426C15.4736 12.1793 15.277 12.8084 15.3787 13.425L15.8213 16.1084C16.0775 17.6611 14.51 18.8452 13.1689 18.1121L10.851 16.8451C10.3184 16.554 9.68221 16.554 9.14964 16.8451L6.8318 18.1121C5.49065 18.8452 3.92318 17.6611 4.17931 16.1084L4.62198 13.425C4.72369 12.8084 4.52709 12.1793 4.09623 11.7426L2.22105 9.84221C1.13605 8.74259 1.73477 6.82675 3.23421 6.60021L5.82564 6.20871C6.42107 6.11875 6.9358 5.72993 7.20208 5.16895L8.361 2.72748Z"
+                          fill="#FFB23E"></path>
+                      </svg>
+                    </span>
+                  </div>
+
+                  <div class="text pl-1">
+                    <p>4.7(2.5K)</p>
+                  </div>
+                </div>
+
+              </div>
+
+              <div class="popular-inner-box">
+                <div class="Menu-List-text">
+                  <h3>K. Subba Rao</h3>
+                </div>
+
+                <div class="popular-inner-item">
+                  <div class="text">
+                    <h5>"Proficient in crafting classic and modern cuisine, with a knack for developing unique flavor profiles." </h5>
+                  </div>
+                </div>
+              </div>
+
+
+            </div>
+          </div>
+        </label>
+
+      </div>
+      <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
+        <label class="option_item">
+          <input type="checkbox" class="checkbox">
+          <div class="option_inner facebook">
+            <div class="tickmark">
+              <img src="https://cdn-icons-png.flaticon.com/512/5290/5290119.png">
+            </div>
+            <div class="Menu-List">
+              <div class="Menu-List-img">
+                <img
+                  src="https://static.vecteezy.com/system/resources/thumbnails/035/592/098/small_2x/ai-generated-happy-professional-chef-portrait-over-blue-background-free-photo.jpg"
+                  alt="thumb">
+
+                <div class="Menu-List-img-overlay">
+                  <div class="icon">
+                    <span>
+                      <svg width="18" height="18" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                          d="M8.361 2.72748C9.03157 1.3148 10.9691 1.3148 11.6396 2.72748L12.7986 5.16895C13.0649 5.72993 13.5796 6.11875 14.175 6.20871L16.7664 6.60021C18.2659 6.82675 18.8646 8.74259 17.7796 9.84221L15.9044 11.7426C15.4736 12.1793 15.277 12.8084 15.3787 13.425L15.8213 16.1084C16.0775 17.6611 14.51 18.8452 13.1689 18.1121L10.851 16.8451C10.3184 16.554 9.68221 16.554 9.14964 16.8451L6.8318 18.1121C5.49065 18.8452 3.92318 17.6611 4.17931 16.1084L4.62198 13.425C4.72369 12.8084 4.52709 12.1793 4.09623 11.7426L2.22105 9.84221C1.13605 8.74259 1.73477 6.82675 3.23421 6.60021L5.82564 6.20871C6.42107 6.11875 6.9358 5.72993 7.20208 5.16895L8.361 2.72748Z"
+                          fill="#FFB23E"></path>
+                      </svg>
+                    </span>
+                  </div>
+
+                  <div class="text pl-1">
+                    <p>4.7(2.5K)</p>
+                  </div>
+                </div>
+
+              </div>
+
+              <div class="popular-inner-box">
+                <div class="Menu-List-text">
+                  <h3>K. Subba Rao</h3>
+                </div>
+
+                <div class="popular-inner-item">
+
+
+                  <div class="text">
+                    <h5>"Proficient in crafting classic and modern cuisine, with a knack for developing unique flavor profiles." </h5>
+                  </div>
+                </div>
+
+
+              </div>
+
+
+            </div>
+          </div>
+        </label>
+      </div>
+      <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
+        <label class="option_item">
+          <input type="checkbox" class="checkbox">
+          <div class="option_inner facebook">
+            <div class="tickmark">
+              <img src="https://cdn-icons-png.flaticon.com/512/5290/5290119.png">
+            </div>
+            <div class="Menu-List">
+              <div class="Menu-List-img">
+                <img
+                  src="https://static.vecteezy.com/system/resources/thumbnails/026/488/038/small_2x/handsome-male-master-chef-smiling-generate-ai-photo.jpg"
+                  alt="thumb">
+
+                <div class="Menu-List-img-overlay">
+                  <div class="icon">
+                    <span>
+                      <svg width="18" height="18" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                          d="M8.361 2.72748C9.03157 1.3148 10.9691 1.3148 11.6396 2.72748L12.7986 5.16895C13.0649 5.72993 13.5796 6.11875 14.175 6.20871L16.7664 6.60021C18.2659 6.82675 18.8646 8.74259 17.7796 9.84221L15.9044 11.7426C15.4736 12.1793 15.277 12.8084 15.3787 13.425L15.8213 16.1084C16.0775 17.6611 14.51 18.8452 13.1689 18.1121L10.851 16.8451C10.3184 16.554 9.68221 16.554 9.14964 16.8451L6.8318 18.1121C5.49065 18.8452 3.92318 17.6611 4.17931 16.1084L4.62198 13.425C4.72369 12.8084 4.52709 12.1793 4.09623 11.7426L2.22105 9.84221C1.13605 8.74259 1.73477 6.82675 3.23421 6.60021L5.82564 6.20871C6.42107 6.11875 6.9358 5.72993 7.20208 5.16895L8.361 2.72748Z"
+                          fill="#FFB23E"></path>
+                      </svg>
+                    </span>
+                  </div>
+
+                  <div class="text pl-1">
+                    <p>4.7(2.5K)</p>
+                  </div>
+                </div>
+
+              </div>
+
+              <div class="popular-inner-box">
+                <div class="Menu-List-text">
+                  <h3>K. Subba Rao</h3>
+                </div>
+
+                <div class="popular-inner-item">
+                  <div class="text">
+                    <h5>"Proficient in crafting classic and modern cuisine, with a knack for developing unique flavor profiles." </h5>
+                  </div>
+                </div>
+              </div>
+
+
+            </div>
+          </div>
+        </label>
+
+      </div>
+      
+      <div class="next-btn px-5 py-3">
+        <a  class="Bhagona-Btn float-end" >Continue <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+      </div>
+    </div>
+</section>
+            </div>
+            </div>
+            </div>
+
+
+  <div class="bg bg-orange"></div>
 </ion-content>
