--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -18,7 +18,7 @@
     <div class="header-box">
       <input type="checkbox" name="check" id="check">
       <div class="logo-container">
-        <img src="../../../assets/logo.png" style="width: 100px;">
+        <img src="../../../assets/home-logo.png" style="width: 145px;">
       </div>
 
       <div class="nav-btn">
@@ -39,6 +39,7 @@
             
           </ul>
         </div>
+        
         <div class="log-sign" style="--i: 1.8s">
           <span class="fa-stack fa-2x has-badge" data-count="5">
   <i class="fa fa-circle fa-stack-2x fa-inverse"></i>
@@ -108,7 +109,7 @@
     </div>
 
      <div class="products bg-orange">
-    <div class="container-fluid">
+    <div class="container">
     <div class="row">
       <div class="col-xl-3 col-lg-3 col-md-4 col-sm-4">
         <div class="Product-Card">
