Order confirmation UI

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -13,6 +13,8 @@
       <ion-title size="large">Blank</ion-title>
     </ion-toolbar>
   </ion-header> -->
+ <!-- Reciept top-half -->
+
   <section>
   <header>
     <div class="header-box">
@@ -322,5 +324,52 @@
         </div>
     </footer>
   
+
+
+    
+  <div class="payment-section" style="display: none;">
+<div id="wrapper" class="payment">
+  <div class="payment-card">
+    <div class="payment-icon">
+    </div>
+    <h1>
+      order confirmed!
+    </h1>
+    <p>
+      Your order has been placed successfully
+    </p>
+     
+  </div>
+  <!-- Reciept bottom-half -->
+  <div class="payment-card">
+    <ul>
+      
+      <li>
+        <span>Your order Event Date</span>
+        <span>July 4, 2023</span>
+      </li>
+      <li>
+        <span>payment on</span>
+        <span>July 4, 2023</span>
+      </li>
+      <li>
+        <span>Amount</span>
+        <span>$99</span>
+      </li>
+    </ul>
+  </div>
+  <!-- Reciept CTA -->
+  <div class="payment-card">
+    <div class="cta-row">
+      <button class="secondary">
+        Back to Home
+      </button>
+      <button>
+        Click For Next Booking
+      </button>
+    </div>
+  </div>
+</div>
+</div>
 
 </ion-content>
