--- a/src/app/components/login/login.page.scss
+++ b/src/app/components/login/login.page.scss
@@ -121,6 +121,9 @@ margin: auto;
   top: 12px;
   left: 20px;
   transition: 0.2s ease-in-out;
+  color: #000000;
+  font-size: 14px;
+  font-weight: 500;
 }
 
 .input-field:focus ~ .label,
