--- a/src/app/components/menu/menu.page.html
+++ b/src/app/components/menu/menu.page.html
@@ -334,6 +334,7 @@
         </label>
       </div>
       <div class="next-btn px-5 py-3">
+        <a  class="Bhagona-Btn float-start" (click)="gotocheff()">Cart <i class="fa fa-cart-plus" aria-hidden="true"></i></a>
         <a  class="Bhagona-Btn float-end" (click)="gotocheff()">Continue <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
       </div>
     </div>
