--- a/src/app/components/orderconfirm/orderconfirm.page.html
+++ b/src/app/components/orderconfirm/orderconfirm.page.html
@@ -10,4 +10,50 @@
       <ion-title size="large">orderconfirm</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  
+  <div class="payment-section">
+<div id="wrapper" class="payment">
+  <div class="payment-card">
+    <div class="payment-icon">
+    </div>
+    <h1>
+      order confirmed!
+    </h1>
+    <p>
+      Your order has been placed successfully
+    </p>
+     
+  </div>
+  <!-- Reciept bottom-half -->
+  <div class="payment-card">
+    <ul>
+      
+      <li>
+        <span>Your order Event Date</span>
+        <span>July 4, 2023</span>
+      </li>
+      <li>
+        <span>payment on</span>
+        <span>July 4, 2023</span>
+      </li>
+      <li>
+        <span>Amount</span>
+        <span>$99</span>
+      </li>
+    </ul>
+  </div>
+  <!-- Reciept CTA -->
+  <div class="payment-card">
+    <div class="cta-row">
+      <button class="secondary">
+        Back to Home
+      </button>
+      <button>
+        Next Booking
+      </button>
+    </div>
+  </div>
+</div>
+</div>
 </ion-content>
