--- a/src/app/components/ourservice/ourservice.page.html
+++ b/src/app/components/ourservice/ourservice.page.html
@@ -10,4 +10,226 @@
       <ion-title size="large">ourservice</ion-title>
     </ion-toolbar>
   </ion-header>
+
+
+  
+  <section>
+  
+     <div class="products bg-orange">
+    <div class="container">
+    <div class="row">
+      <h2 class="title">Our Services</h2>
+      <div class="col-xl-3 col-lg-3 col-md-4 col-sm-4">
+        <div class="Product-Card">
+          <div class="card-inner" >
+            <div class="image-area">
+              <a href="#">
+                <img
+                  src="https://img.freepik.com/premium-photo/outdoor-wedding-tent-decorated-with-flowers-outdoor-wedding_641503-144431.jpg"
+                  alt="">
+              </a>
+            </div>
+            <div class="blog-content">
+              <p class="tag color-two">
+                shamiyana tent
+              </p>
+
+            </div>
+          </div>
+          <a href="#" class="blog-btn rounded-button bg-two">
+            <svg width="16" height="15" viewBox="0 0 19 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M1 17L17 1H7.8" stroke="white"></path>
+            </svg>
+          </a>
+        </div>
+      </div>
+
+      <div class="col-xl-3 col-lg-3 col-md-4 col-sm-4">
+        <div class="Product-Card">
+          <div class="card-inner">
+            <div class="image-area">
+              <a href="#">
+                <img
+                  src="https://img.freepik.com/premium-photo/outdoor-wedding-tent-decorated-with-flowers-outdoor-wedding_641503-144431.jpg"
+                  alt="">
+              </a>
+            </div>
+            <div class="blog-content">
+              <p class="tag color-two">
+                cooking dishes
+              </p>
+
+            </div>
+          </div>
+          <a href="#" class="blog-btn rounded-button bg-two">
+            <svg width="16" height="15" viewBox="0 0 19 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M1 17L17 1H7.8" stroke="white"></path>
+            </svg>
+          </a>
+        </div>
+      </div>
+      <div class="col-xl-3 col-lg-3 col-md-4 col-sm-4">
+        <div class="Product-Card">
+          <div class="card-inner" >
+            <div class="image-area">
+              <a href="#">
+                <img
+                  src="https://img.freepik.com/premium-photo/outdoor-wedding-tent-decorated-with-flowers-outdoor-wedding_641503-144431.jpg"
+                  alt="">
+              </a>
+            </div>
+            <div class="blog-content">
+              <p class="tag color-two">
+                shamiyana tent
+              </p>
+
+            </div>
+          </div>
+          <a href="#" class="blog-btn rounded-button bg-two">
+            <svg width="16" height="15" viewBox="0 0 19 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M1 17L17 1H7.8" stroke="white"></path>
+            </svg>
+          </a>
+        </div>
+      </div>
+
+      <div class="col-xl-3 col-lg-3 col-md-4 col-sm-4">
+        <div class="Product-Card">
+          <div class="card-inner">
+            <div class="image-area">
+              <a href="#">
+                <img
+                  src="https://img.freepik.com/premium-photo/outdoor-wedding-tent-decorated-with-flowers-outdoor-wedding_641503-144431.jpg"
+                  alt="">
+              </a>
+            </div>
+            <div class="blog-content">
+              <p class="tag color-two">
+                cooking dishes
+              </p>
+
+            </div>
+          </div>
+          <a href="#" class="blog-btn rounded-button bg-two">
+            <svg width="16" height="15" viewBox="0 0 19 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M1 17L17 1H7.8" stroke="white"></path>
+            </svg>
+          </a>
+        </div>
+      </div>
+      <div class="col-xl-3 col-lg-3 col-md-4 col-sm-4">
+        <div class="Product-Card">
+          <div class="card-inner" >
+            <div class="image-area">
+              <a href="#">
+                <img
+                  src="https://img.freepik.com/premium-photo/outdoor-wedding-tent-decorated-with-flowers-outdoor-wedding_641503-144431.jpg"
+                  alt="">
+              </a>
+            </div>
+            <div class="blog-content">
+              <p class="tag color-two">
+                shamiyana tent
+              </p>
+
+            </div>
+          </div>
+          <a href="#" class="blog-btn rounded-button bg-two">
+            <svg width="16" height="15" viewBox="0 0 19 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M1 17L17 1H7.8" stroke="white"></path>
+            </svg>
+          </a>
+        </div>
+      </div>
+
+      <div class="col-xl-3 col-lg-3 col-md-4 col-sm-4">
+        <div class="Product-Card">
+          <div class="card-inner">
+            <div class="image-area">
+              <a href="#">
+                <img
+                  src="https://img.freepik.com/premium-photo/outdoor-wedding-tent-decorated-with-flowers-outdoor-wedding_641503-144431.jpg"
+                  alt="">
+              </a>
+            </div>
+            <div class="blog-content">
+              <p class="tag color-two">
+                cooking dishes
+              </p>
+
+            </div>
+          </div>
+          <a href="#" class="blog-btn rounded-button bg-two">
+            <svg width="16" height="15" viewBox="0 0 19 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M1 17L17 1H7.8" stroke="white"></path>
+            </svg>
+          </a>
+        </div>
+      </div>
+      <div class="col-xl-3 col-lg-3 col-md-4 col-sm-4">
+        <div class="Product-Card">
+          <div class="card-inner" >
+            <div class="image-area">
+              <a href="#">
+                <img
+                  src="https://img.freepik.com/premium-photo/outdoor-wedding-tent-decorated-with-flowers-outdoor-wedding_641503-144431.jpg"
+                  alt="">
+              </a>
+            </div>
+            <div class="blog-content">
+              <p class="tag color-two">
+                shamiyana tent
+              </p>
+
+            </div>
+          </div>
+          <a href="#" class="blog-btn rounded-button bg-two">
+            <svg width="16" height="15" viewBox="0 0 19 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M1 17L17 1H7.8" stroke="white"></path>
+            </svg>
+          </a>
+        </div>
+      </div>
+
+      <div class="col-xl-3 col-lg-3 col-md-4 col-sm-4">
+        <div class="Product-Card">
+          <div class="card-inner">
+            <div class="image-area">
+              <a href="#">
+                <img
+                  src="https://img.freepik.com/premium-photo/outdoor-wedding-tent-decorated-with-flowers-outdoor-wedding_641503-144431.jpg"
+                  alt="">
+              </a>
+            </div>
+            <div class="blog-content">
+              <p class="tag color-two">
+                cooking dishes
+              </p>
+
+            </div>
+          </div>
+          <a href="#" class="blog-btn rounded-button bg-two">
+            <svg width="16" height="15" viewBox="0 0 19 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M1 17L17 1H7.8" stroke="white"></path>
+            </svg>
+          </a>
+        </div>
+      </div>
+      
+    </div>
+
+  </div>
+  </div>
+
+
+  
+  </section>
+ 
+
+  <div class="bg bg-orange"></div>
+
+
+  
+
+
 </ion-content>
